...
    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toTopOf="@+id/btnHomeInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InfoPic">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/InfoDescription"
                android:layout_width="match_parent"
                android:layout_height="139dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="5dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/InfoExtra1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/InfoExtra2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/InfoExtra3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/InfoExtra4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/InfoExtra5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/InfoExtra6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

...
        android:layout_height="100dp"
        android:text="Profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/InfoTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
...
        android:id="@+id/InfoPic"
        android:layout_width="200dp"
        android:layout_height="260dp"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toStartOf="@+id/InfoMainText3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InfoTitle"
        app:srcCompat="@drawable/nowayhome1_691x1024" />

    <TextView
        android:id="@+id/InfoMainText3"
...
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/InfoPic"
        app:layout_constraintTop_toBottomOf="@+id/InfoMainText2" />

    <TextView
        android:id="@+id/InfoMainText2"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="1dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/InfoPic"
        app:layout_constraintTop_toBottomOf="@+id/InfoMainText1" />

    <TextView
        android:id="@+id/InfoMainText1"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
...
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/InfoPic"
        app:layout_constraintTop_toBottomOf="@+id/InfoTitle" />

    <TextView
        android:id="@+id/InfoMainText4"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
...
