...
        app:layout_constraintBottom_toTopOf="@+id/btnProfileHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="173dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="174dp"
        android:layout_marginBottom="329dp"
...
        app:layout_constraintBottom_toTopOf="@+id/btnProfileHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageProfilePicture" />

    <Button
        android:id="@+id/btnPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="157dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="247dp"
...
        app:layout_constraintBottom_toTopOf="@+id/btnProfileHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textUsername" />

    <Button
        android:id="@+id/btnUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="157dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="171dp"
...
        app:layout_constraintBottom_toTopOf="@+id/btnProfileHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUsername" />

    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="19dp"
...
